Line breakers in values. I-section moment of interia repaired. Data validators change visibility.

--- a/Build_IT_Web/ClientApp/app/components/parameters-form/data-parameters-form/data-parameters-form.component.html
+++ b/Build_IT_Web/ClientApp/app/components/parameters-form/data-parameters-form/data-parameters-form.component.html
@@ -1,7 +1,8 @@
 ﻿<h3>
     <span innerHTML="{{ newParameter.name | html }}"></span> - {{newParameter.description}}
 </h3>
-<form (ngSubmit)="onSubmit()">
+
+<form (ngSubmit)="onSubmit($event)">
 
     <div class="row">
         <div class="form-group form-inline">
