--- a/Build_IT_Web/ClientApp/app/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/app/components/script-calculator/script-calculator.component.html
@@ -1,6 +1,5 @@
 ﻿
-<div *ngIf="script"
-     class="text-light">
+<div *ngIf="script">
     <div class="text-center">
         <h1>{{script.name}}</h1>
     </div>
@@ -13,56 +12,63 @@
     </ul>
     <p *ngIf="!parameters"><em>Loading...</em></p>
 
-    <table class='table' *ngIf="parameters">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Value</th>
-                <th>Unit</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let parameter of sortParameters(visibleParameters, 'number')"                
-                [ngClass]="{'table table-warning': isImportant(parameter)}">
-                <td [innerHTML]="parameter.name | html"></td>
-                <td>
-                    <div *ngIf="parameter.context % (2 * parameterOptions.Editable) >= parameterOptions.Editable">
-                        <input *ngIf="parameter.valueOptions.length == 0 || parameter.valueOptionSetting == valueOptionSetting.UserInput"
-                               [(ngModel)]="parameter.value"
-                               placeholder="value"
-                               (change)="setValueChanged(parameter)" />
-                        <div class="form-inline"
-                             *ngIf="parameter.valueOptions.length > 0 && parameter.valueOptions.length <= 3">
-                            <label *ngFor="let valueOption of parameter.valueOptions; index as i">
-                                <input type="radio"
-                                       value="{{valueOption.value}}"
-                                       id="{{parameter.id}}_valueOption{{i}}"
-                                       [(ngModel)]="parameter.value"
-                                       name="{{parameter.id}}_valueOption{{i}}"
-                                       (change)="setValueChanged(parameter)" />
-                                <label class="ml-1 mr-3"
-                                       for="{{parameter.id}}_valueOption{{i}}">{{valueOption.value }}</label>
-                            </label>
-                        </div>
-                        <select *ngIf="parameter.valueOptions.length > 3"
-                                [(ngModel)]="parameter.value"
-                                (change)="setValueChanged(parameter)">
-                            <option *ngFor="let valueOption of parameter.valueOptions">
-                                {{valueOption.value }}
-                            </option>
-                        </select>
-                    </div>
-                    <span *ngIf="parameter.context % (2 * parameterOptions.Calculation) >= parameterOptions.Calculation">{{parameter.value }}</span>
-                </td>
-                <td [innerHTML]="parameter.unit | html"></td>
-                <td>{{ parameter.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <table mat-table [dataSource]="parameters" *ngIf="parameters" class="mat-elevation-z8">
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let parameter"> <span [innerHtml]="parameter.name | html"></span> </td>
+        </ng-container>
 
+        <ng-container matColumnDef="value">
+            <th mat-header-cell *matHeaderCellDef> Value </th>
+            <td mat-cell *matCellDef="let parameter">
+                <div *ngIf="parameter.context % (2 * parameterOptions.Editable) >= parameterOptions.Editable">
+                    <input *ngIf="parameter.valueOptions.length == 0 || parameter.valueOptionSetting == valueOptionSetting.UserInput"
+                           [(ngModel)]="parameter.value"
+                           placeholder="value"
+                           (change)="setValueChanged(parameter)" />
+                    <div class="form-inline"
+                         *ngIf="parameter.valueOptions.length > 0 && parameter.valueOptions.length <= 3">
+                        <label *ngFor="let valueOption of parameter.valueOptions; index as i">
+                            <input type="radio"
+                                   value="{{valueOption.value}}"
+                                   id="{{parameter.id}}_valueOption{{i}}"
+                                   [(ngModel)]="parameter.value"
+                                   name="{{parameter.id}}_valueOption{{i}}"
+                                   (change)="setValueChanged(parameter)" />
+                            <label class="ml-1 mr-3"
+                                   for="{{parameter.id}}_valueOption{{i}}">{{valueOption.value }}</label>
+                        </label>
+                    </div>
+                    <select *ngIf="parameter.valueOptions.length > 3"
+                            [(ngModel)]="parameter.value"
+                            (change)="setValueChanged(parameter)">
+                        <option *ngFor="let valueOption of parameter.valueOptions">
+                            {{valueOption.value }}
+                        </option>
+                    </select>
+                </div>
+                <span *ngIf="parameter.context % (2 * parameterOptions.Calculation) >= parameterOptions.Calculation">{{parameter.value }}</span>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="unit">
+            <th mat-header-cell *matHeaderCellDef> Unit </th>
+            <td mat-cell *matCellDef="let parameter"> <span [innerHtml]="parameter.unit | html"></span> </td>
+        </ng-container>
+
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let parameter"> {{ parameter.description }} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    
     <button (click)="calculate()"
-            class="btn btn-primary">Calculate</button>
+            class="btn btn-primary">
+        Calculate
+    </button>
 
     <table class='table' *ngIf="resultParameters && !valueChanged">
         <thead>
