--- a/Build_IT_Web/ClientApp/app/components/script-card/script-card.component.html
+++ b/Build_IT_Web/ClientApp/app/components/script-card/script-card.component.html
@@ -1,11 +1,39 @@
-﻿<div class="card flex-grow-1">
+﻿<!--<mat-card class="card flex-grow-1 script-card">
+    <mat-card-header>
+        <div mat-card-avatar class="card-header script-header-image"></div>
+        <mat-card-title>{{ script.name }}</mat-card-title>
+        <mat-card-subtitle>{{ script.accordingTo }}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://lorempixel.com/250/250/?random={{script.id}}" alt="{{script.name}}">
+    <mat-card-content>
+        <p>{{script.description}}</p>
+    </mat-card-content>
+    <mat-card-actions class="align-bottom">
+        <button mat-button
+                [routerLink]="['/scripts/calculator', script.id]">
+            <span class="fa fa-calculator"></span> Calculate
+        </button>
+        <button mat-button
+                [routerLink]="['/scripts/edit', script.id]">
+            <span class="fa fa-edit"></span> Edit
+        </button>
+        <button mat-button
+                (click)="delete(script)">
+            <span class="fa fa-remove"></span> Delete
+        </button>
+    </mat-card-actions>
+</mat-card>-->
+
+
+
+<div class="card flex-grow-1">
     <div class="card-header bg-dark text-light">
         <h5>{{ script.name }}</h5>
     </div>
-    <div class="card-body  bg-light">
+    <div class="card-body  bg-light text-dark">
         <div class="row">
             <div class="col-md-8 card-text">
-                {{script.description}}
+                {{script.description }}
             </div>
             <div class="col-md-4 card-img">
                 <img class="img-fluid rounded-circle"
