--- a/Build_IT_Web/ClientApp/app/components/script-card/script-card.component.less
+++ b/Build_IT_Web/ClientApp/app/components/script-card/script-card.component.less
@@ -1,3 +1,7 @@
-﻿.test{
-    background-color: red;
+﻿/*.script-card {
+    max-width: 400px;
 }
+.script-header-image {
+    background-image: url('https://lorempixel.com/100/100/?random=2');
+    background-size: cover;
+}*/
