--- a/Build_IT_Web/ClientApp/app/components/script-form/script-form.component.html
+++ b/Build_IT_Web/ClientApp/app/components/script-form/script-form.component.html
@@ -1,5 +1,5 @@
-﻿<div class="container text-light">
-    <form (ngSubmit)="onSubmit()">
+﻿<div class="container">
+    <form (ngSubmit)="onSubmit()" [formGroup]="scriptForm">
         <h2>Script</h2>
         <div class="row">
             <div class="form-group col-md-7 col-lg-3">
@@ -7,10 +7,15 @@
                 <input type="text"
                        class="form-control"
                        id="scriptName"
+                       formControlName="name"
                        [(ngModel)]="script.name"
                        name="name"
                        placeholder="Name"
                        autocomplete="off">
+                <div *ngIf="scriptName.touched && scriptName.invalid"
+                     class="alert alert-danger">
+                    Name is required.
+                </div>
             </div>
             <div class="form-group col-sm-6 col-md-5 col-lg-3">
                 <label for="scriptAuthor">Author</label>
@@ -59,9 +64,14 @@
                 <textarea class="form-control"
                           id="scriptDescription"
                           rows="3"
+                          formControlName="description"
                           [(ngModel)]="script.description"
                           name="description"
                           placeholder="Description"></textarea>
+                <div *ngIf="scriptDescription.touched && scriptDescription.invalid"
+                     class="alert alert-danger">
+                    Description is required.
+                </div>
             </div>
         </div>
 
