--- a/TestWPF/MainWindow.xaml
+++ b/TestWPF/MainWindow.xaml
@@ -6,7 +6,10 @@
         xmlns:local="clr-namespace:TestWPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
+    <Grid Visibility="{Binding Test, Converter={StaticResource BooleanToVisibilityConverter}}">
         <StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text=""/>
