--- a/Build_IT_Web/ClientApp/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.html
+++ b/Build_IT_Web/ClientApp/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.html
@@ -1,98 +1,304 @@
 ﻿
-    <div class="text-center">
+<div class="text-center">
 
-        <h1>Dead loads calculator</h1>
+    <h1>Dead loads calculator</h1>
 
-        <table mat-table
-               class="mat-elevation-z8 mt-4 mb-4 center"
-               *ngIf="selectedMaterials.length > 0">
-            <thead>
-                <tr>
-                    <td>Category</td>
-                    <td>Name</td>
-                    <td>Width [cm]</td>
-                    <td>Height [cm]</td>
-                    <td>Thickness [cm]</td>
-                    <td>Minimum Density</td>
-                    <td>Maximum Density</td>
-                    <td>Unit</td>
-                    <td>Add</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let materialForCalculation of selectedMaterials; let i = index">
-                    <td>{{materialForCalculation.categoryName}}</td>
-                    <td>{{materialForCalculation.material.name}}</td>
-                    <td>
-                        <input type="number"
-                               (change)="calculate(materialForCalculation)"
-                               [(ngModel)]="materialForCalculation.width" />
-                    </td>
-                    <td>
-                        <input type="number"
-                               (change)="calculate(materialForCalculation)"
-                               [(ngModel)]="materialForCalculation.height" />
-                    </td>
-                    <td>
-                        <input type="number"
-                               (change)="calculate(materialForCalculation)"
-                               [(ngModel)]="materialForCalculation.thickness" />
-                    </td>
-                    <td>{{materialForCalculation.calculatedMinimumLoad}}</td>
-                    <td>{{materialForCalculation.calculatedMaximumLoad}}</td>
-                    <td [innerHTML]="units[materialForCalculation.material.unit].value"></td>
-                    <td><button (click)="removeMaterial(index)">-</button></td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="5"></td>
-                    <td>{{sumMinimumDeadLoads}}</td>
-                    <td>{{sumMaximumDeadLoads}}</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tfoot>
-        </table>
+    <table mat-table
+           multiTemplateDataRows
+           [dataSource]="selectedMaterialDataSource"
+           class="mat-elevation-z8 mt-4 mb-4 center"
+           *ngIf="selectedMaterials.length > 0">
+        <ng-container matColumnDef="category">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-left">
+                    Category
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-left">
+                <div class="mr-3">
+                    {{materialForCalculation.categoryName}}
+                </div>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Name
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
+                <div class="mr-1">
+                    {{materialForCalculation.material.name}}
+                </div>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+        <ng-container matColumnDef="length">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Length [cm]
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
+                <mat-form-field *ngIf="materialForCalculation.material.unit > 0; else noLengthBlock"
+                                class="ml-3">
+                    <input matInput
+                           type="number"
+                           class="text-center"
+                           min="0"
+                           (change)="calculate(materialForCalculation)"
+                           [(ngModel)]="materialForCalculation.length">
+                </mat-form-field>
+                <ng-template #noLengthBlock>-</ng-template>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+        <ng-container matColumnDef="width">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Width [cm]
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
 
-        <select [(ngModel)]="selectedCategory"
-                (change)="onCategoryChange()">
-            <option *ngFor="let category of categories"
-                    [ngValue]="category">
+                <mat-form-field *ngIf="materialForCalculation.material.unit > 1; else noLengthBlock"
+                                class="ml-3">
+                    <input matInput
+                           type="number"
+                           class="text-center"
+                           min="0"
+                           (change)="calculate(materialForCalculation)"
+                           [(ngModel)]="materialForCalculation.width">
+                </mat-form-field>
+                <ng-template #noLengthBlock>-</ng-template>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+        <ng-container matColumnDef="thickness">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Thickness [cm]
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
+
+                <mat-form-field *ngIf="materialForCalculation.material.unit > 2; else noLengthBlock"
+                                class="ml-3">
+                    <input matInput  
+                           type="number"
+                           class="text-center"
+                           min="0"
+                           (change)="calculate(materialForCalculation)"
+                           [(ngModel)]="materialForCalculation.thickness">
+                </mat-form-field>
+                <ng-template #noLengthBlock>-</ng-template>
+            </td>
+            <td mat-footer-cell
+                *matFooterCellDef
+                class="text-right">
+                Total:
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="minDensity">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Minimum<br />Density
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
+                {{materialForCalculation.calculatedMinimumLoad | number:'1.0-3'}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{sumMinimumDeadLoads | number:'1.0-3'}}</td>
+        </ng-container>
+        <ng-container matColumnDef="maxDensity">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Maximum<br />Density
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
+                {{materialForCalculation.calculatedMaximumLoad | number:'1.0-3'}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef>{{sumMaximumDeadLoads | number:'1.0-3'}}</td>
+        </ng-container>
+        <ng-container matColumnDef="unit">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Unit
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center"
+                [innerHTML]="units[materialForCalculation.unit].value"></td>
+            <td mat-footer-cell *matFooterCellDef>
+                <div [innerHTML]="units[selectedMaterials[0].unit].value"></div>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="remove">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Remove
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let materialForCalculation"
+                class="text-center">
+                <button mat-stroked-button color="warn"
+                        (click)="removeMaterial(materialForCalculation)">
+                    <span class="fa fa-minus"></span>
+                </button>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="additions">
+            <td mat-cell
+                colspan="9"
+                *matCellDef="let materialForCalculation"
+                class="text-left">
+                <div *ngFor="let addition of materialForCalculation.additions">
+                    <mat-checkbox class="ml-1" 
+                                  [checked]="addition.isChecked"
+                                  (change)="additionChecked(materialForCalculation, addition)">
+                        {{addition.origin.name}}
+                        <span *ngIf="addition.origin.description">
+                            - {{addition.origin.description}}
+                        </span>
+                    </mat-checkbox>
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="materialsForCalculationsDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: materialsForCalculationsDisplayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['additions'];"
+            [class.additions-hidden]="row"></tr>
+        <tr mat-footer-row
+            [class.summary-hidden]="!isUnitsProper()"
+            *matFooterRowDef="materialsForCalculationsDisplayedColumns"></tr>
+    </table>
+
+    <mat-form-field class="m-2">
+        <mat-label>Categories</mat-label>
+        <mat-select [(ngModel)]="selectedCategory"
+                    name="category"
+                    (selectionChange)="onCategoryChange()">
+            <mat-option *ngFor="let category of categories"
+                        [value]="category">
                 {{category.name}}
-            </option>
-        </select>
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
 
-        <select *ngIf="subcategories"
-                [(ngModel)]="selectedSubcategory"
-                (change)="onSubcategoryChange()">
-            <option *ngFor="let subcategory of subcategories"
-                    [ngValue]="subcategory">
+    <mat-form-field class="m-2"
+                    *ngIf="subcategories">
+        <mat-label>Subcategories</mat-label>
+        <mat-select [(ngModel)]="selectedSubcategory"
+                    name="subcategory"
+                    (selectionChange)="onSubcategoryChange()">
+            <mat-option *ngFor="let subcategory of subcategories"
+                        [value]="subcategory">
                 {{subcategory.name}} - {{subcategory.documentName}}
-            </option>
-        </select>
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
 
-        <table mat-table
-               class="mat-elevation-z8 center mt-4"
-               *ngIf="materials">
-            <thead>
-                <tr>
-                    <td>Name</td>
-                    <td>Minimum Density</td>
-                    <td>Maximum Density</td>
-                    <td>Unit</td>
-                    <td>Add</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let material of materials">
-                    <td>{{material.name}}</td>
-                    <td>{{material.minimumDensity}}</td>
-                    <td>{{material.maximumDensity}}</td>
-                    <td [innerHTML]="units[material.unit].value"></td>
-                    <td><button (click)="addMaterial(material)">+</button></td>
-                </tr>
-            </tbody>
-        </table>
+    <table mat-table
+           [dataSource]="materials"
+           class="mat-elevation-z8 center mt-4"
+           *ngIf="materials">
+        <ng-container matColumnDef="name">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                Name
+            </th>
+            <td mat-cell
+                *matCellDef="let material"
+                class="text-left">
+                {{material.name}}
+            </td>
+        </ng-container>
 
-    </div>
+        <ng-container matColumnDef="minDensity">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Minimum<br />Density
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let material">
+                {{material.minimumDensity}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="maxDensity">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Maximum<br />Density
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let material">
+                {{material.maximumDensity}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="unit">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Unit
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let material"
+                [innerHTML]="units[material.unit].value"></td>
+        </ng-container>
+
+        <ng-container matColumnDef="add">
+            <th mat-header-cell
+                *matHeaderCellDef>
+                <div class="ml-3 mr-3 text-center">
+                    Add
+                </div>
+            </th>
+            <td mat-cell
+                *matCellDef="let material">
+                <button mat-stroked-button color="accent"
+                        (click)="addMaterial(material)">
+                    <span class="fa fa-plus"></span>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="materialsDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: materialsDisplayedColumns;"></tr>
+    </table>
+</div>
