--- a/Build_IT_Web/ClientApp/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.less
+++ b/Build_IT_Web/ClientApp/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.less
@@ -2,3 +2,11 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+tr.additions-hidden {
+    height: 0;
+}
+
+tr.summary-hidden {
+    display: none;
+}
