--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/script-calculator.component.less
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/script-calculator.component.less
@@ -1,3 +1,23 @@
 ﻿table{
     width: 100%;
 }
+
+.mat-hint {
+    margin-bottom:10px;
+    display:inline-block;
+    align-content:flex-start;
+}
+
+.form-inline {
+    transform: scale(0.9);
+    transform-origin: left;
+}
+
+.parameter-description {
+    color: rgba(255,255,255,.7);
+    font-size: 87.5%;
+}
+
+.mat-form-field-paddings {
+    padding-bottom: 0px;
+}
