--- a/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.less
+++ b/Build_IT_Web/ClientApp/app/modules/loads/components/dead-loads-components/dead-loads-calculator/dead-loads-calculator.component.less
@@ -15,6 +15,10 @@ tr.fa-reorder{
     cursor: grab;
 }
 
+.scroll-horizontal {
+    overflow-x: auto;
+}
+
 /*.cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
